k8s/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: salespot
  labels:
    name: salespot
    environment: production
